<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <!-- LOGO -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:background="@color/background_app"
        app:srcCompat="@drawable/logo"/>

    <!-- TITLE -->
    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/tealVital"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="8dp"
        android:text="@string/title_realtime"
        android:textAlignment="center"
        android:textColor="@color/background_app"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- MOVEMENT LEVEL MESSAGE -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/MovementLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/movement"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="italic" />

    </FrameLayout>

    <!-- FINISH BUTTON -->
    <Button
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/fucsiaMove"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/btn_finish"
        android:textColor="@android:color/white" />


</LinearLayout>