<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    >

<!-- LOGO -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- SLOGAN -->
    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan_app"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- SAVE BUTTON -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_save"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        app:backgroundTint="@color/tealVital"

        app:layout_constraintTop_toBottomOf="@+id/slogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRealTime"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <!-- REAL TIME BUTTON -->
    <Button
        android:id="@+id/btnRealTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_realtime"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/tealVital"
        app:layout_constraintTop_toTopOf="@+id/btnSave"
        app:layout_constraintStart_toEndOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>